--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==5.2.7
 django-crispy-forms==2.4
 django-extensions==4.1
 django-widget-tweaks==1.5.0
+et_xmlfile==2.0.0
+openpyxl==3.1.5
 pillow==11.3.0
 psycopg2-binary==2.9.11
 python-decouple==3.8
